--- a/IRKit/IRKitResources/Base.lproj/IRMorsePlayerViewController.xib
+++ b/IRKit/IRKitResources/Base.lproj/IRMorsePlayerViewController.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment defaultVersion="1552" identifier="iOS"/>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <objects>
@@ -17,27 +17,27 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="img_prepare.png" translatesAutoresizingMaskIntoConstraints="NO" id="75I-xP-EJA">
-                    <rect key="frame" x="0.0" y="105" width="320" height="240"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="img_prepare3.png" translatesAutoresizingMaskIntoConstraints="NO" id="75I-xP-EJA">
+                    <rect key="frame" x="0.0" y="171" width="320" height="225"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="320" id="Z5u-aJ-LQZ"/>
-                        <constraint firstAttribute="height" constant="240" id="tdW-gI-BoQ"/>
+                        <constraint firstAttribute="height" constant="225" id="xtj-g1-Ntx"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Volume Up  " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="320" translatesAutoresizingMaskIntoConstraints="NO" id="laK-A4-rN4">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="105"/>
+                    <rect key="frame" x="0.0" y="80" width="320" height="88"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="320" id="Q1j-Ci-Fa4"/>
-                        <constraint firstAttribute="height" constant="105" id="nNc-pX-4An"/>
+                        <constraint firstAttribute="width" constant="320" id="FcR-Mt-YyN"/>
+                        <constraint firstAttribute="height" constant="88" id="nNc-pX-4An"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="32"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="26"/>
                     <color key="textColor" red="0.0" green="0.6588235294" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k2I-eo-h4L" customClass="MPVolumeView">
-                    <rect key="frame" x="60" y="65" width="200" height="60"/>
+                    <rect key="frame" x="60" y="136" width="200" height="60"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="tintColor" red="0.0" green="0.6588235294" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
@@ -76,20 +76,20 @@
             </subviews>
             <color key="backgroundColor" red="0.8980392157" green="0.8980392157" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstAttribute="centerX" secondItem="laK-A4-rN4" secondAttribute="centerX" id="6Uv-N3-sd1"/>
                 <constraint firstAttribute="centerX" secondItem="k2I-eo-h4L" secondAttribute="centerX" id="Aum-P1-bFb"/>
+                <constraint firstItem="75I-xP-EJA" firstAttribute="top" secondItem="laK-A4-rN4" secondAttribute="bottom" constant="3" id="C3a-BQ-v3b"/>
                 <constraint firstAttribute="centerX" secondItem="75I-xP-EJA" secondAttribute="centerX" id="JrE-hd-4PJ"/>
-                <constraint firstItem="laK-A4-rN4" firstAttribute="top" secondItem="74" secondAttribute="top" id="UMb-J5-0kX"/>
+                <constraint firstAttribute="centerX" secondItem="laK-A4-rN4" secondAttribute="centerX" id="LUl-aw-zuA"/>
                 <constraint firstAttribute="centerX" secondItem="WD0-F1-zgM" secondAttribute="centerX" id="UkP-7S-vdd"/>
+                <constraint firstAttribute="centerY" secondItem="75I-xP-EJA" secondAttribute="centerY" id="WZS-Ei-S9w"/>
                 <constraint firstAttribute="bottom" secondItem="WD0-F1-zgM" secondAttribute="bottom" id="YCA-mx-5Hp"/>
-                <constraint firstItem="75I-xP-EJA" firstAttribute="top" secondItem="laK-A4-rN4" secondAttribute="bottom" id="wAh-lG-6S0"/>
-                <constraint firstItem="75I-xP-EJA" firstAttribute="top" secondItem="k2I-eo-h4L" secondAttribute="bottom" constant="-20" id="xKH-3s-IXD"/>
+                <constraint firstItem="75I-xP-EJA" firstAttribute="top" secondItem="k2I-eo-h4L" secondAttribute="bottom" constant="-25" id="xKH-3s-IXD"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
     </objects>
     <resources>
         <image name="icn_check2.png" width="24" height="24"/>
-        <image name="img_prepare.png" width="320" height="240"/>
+        <image name="img_prepare3.png" width="320" height="225"/>
     </resources>
 </document>
