--- a/IRKit/IRKitResources/Base.lproj/IRNewPeripheralScene1ViewController.xib
+++ b/IRKit/IRKitResources/Base.lproj/IRNewPeripheralScene1ViewController.xib
@@ -16,7 +16,7 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Power Up your IRKit" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="320" translatesAutoresizingMaskIntoConstraints="NO" id="12">
-                    <rect key="frame" x="0.0" y="48" width="320" height="88"/>
+                    <rect key="frame" x="0.0" y="81" width="320" height="88"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="88" id="Fi3-3u-yIf"/>
@@ -26,19 +26,19 @@
                     <color key="textColor" red="0.0" green="0.6588235294" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="img_powerup.png" translatesAutoresizingMaskIntoConstraints="NO" id="57">
-                    <rect key="frame" x="0.0" y="122" width="320" height="274"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="img_powerup3.png" translatesAutoresizingMaskIntoConstraints="NO" id="57">
+                    <rect key="frame" x="0.0" y="172" width="320" height="225"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="274" id="SZT-Ru-x9Y"/>
+                        <constraint firstAttribute="height" constant="225" id="SZT-Ru-x9Y"/>
                         <constraint firstAttribute="width" constant="320" id="wLn-dM-XR4"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Connect USB Micro-B" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="120" translatesAutoresizingMaskIntoConstraints="NO" id="N0I-xf-e06">
-                    <rect key="frame" x="30" y="331" width="120" height="88"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Connect USB Micro-B" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="150" translatesAutoresizingMaskIntoConstraints="NO" id="N0I-xf-e06">
+                    <rect key="frame" x="0.0" y="332" width="150" height="88"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="120" id="0yM-AI-iGx"/>
+                        <constraint firstAttribute="width" constant="150" id="0yM-AI-iGx"/>
                         <constraint firstAttribute="height" constant="88" id="wvX-V7-C5G"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
@@ -49,7 +49,7 @@
                     <rect key="frame" x="0.0" y="524" width="320" height="44"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FgO-kv-blt">
+                        <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tNE-IP-onh">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="1"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="0.70588235290000001" green="0.70588235290000001" blue="0.70588235290000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -87,13 +87,13 @@
             </subviews>
             <color key="backgroundColor" red="0.8980392157" green="0.8980392157" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="57" firstAttribute="top" secondItem="12" secondAttribute="bottom" constant="-14" id="0FH-ar-AHd"/>
+                <constraint firstItem="57" firstAttribute="top" secondItem="12" secondAttribute="bottom" constant="3" id="0FH-ar-AHd"/>
                 <constraint firstItem="N0I-xf-e06" firstAttribute="top" secondItem="57" secondAttribute="bottom" constant="-65" id="0ba-AK-Xuc"/>
                 <constraint firstAttribute="centerX" secondItem="57" secondAttribute="centerX" id="3il-X0-dwb"/>
                 <constraint firstAttribute="centerX" secondItem="sI7-6u-aWJ" secondAttribute="centerX" id="5TB-ep-zwL"/>
-                <constraint firstItem="N0I-xf-e06" firstAttribute="leading" secondItem="57" secondAttribute="trailing" constant="-290" id="avx-uo-twC"/>
-                <constraint firstItem="12" firstAttribute="top" secondItem="74" secondAttribute="top" constant="48" id="bPE-5L-uTN"/>
+                <constraint firstItem="N0I-xf-e06" firstAttribute="centerX" secondItem="57" secondAttribute="centerX" constant="-85" id="NqM-0x-mx2"/>
                 <constraint firstAttribute="bottom" secondItem="sI7-6u-aWJ" secondAttribute="bottom" id="qse-Ym-Dql"/>
+                <constraint firstAttribute="centerY" secondItem="57" secondAttribute="centerY" id="t8A-Fb-wEw"/>
                 <constraint firstAttribute="centerX" secondItem="12" secondAttribute="centerX" id="wZm-3B-tbP"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
@@ -101,6 +101,6 @@
     </objects>
     <resources>
         <image name="icn_arrow.png" width="15" height="15"/>
-        <image name="img_powerup.png" width="320" height="273"/>
+        <image name="img_powerup3.png" width="320" height="225"/>
     </resources>
 </document>
