--- a/IRKit/IRKitResources/Base.lproj/IRWifiEditViewController.xib
+++ b/IRKit/IRKitResources/Base.lproj/IRWifiEditViewController.xib
@@ -25,18 +25,32 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your home WiFi information" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="REr-lY-lZo">
-                                <rect key="frame" x="15" y="20" width="295" height="21"/>
+                                <rect key="frame" x="15" y="5" width="295" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="e2e-br-f62"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="802.11b,g,n only" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VNW-wm-Lbo">
+                                <rect key="frame" x="15" y="33" width="287" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="14"/>
+                                <color key="textColor" red="0.31372549019607843" green="0.31372549019607843" blue="0.31372549019607843" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.8980392157" green="0.8980392157" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="centerY" secondItem="REr-lY-lZo" secondAttribute="centerY" id="298-ZH-Dfe"/>
+                            <constraint firstAttribute="trailing" secondItem="VNW-wm-Lbo" secondAttribute="trailing" constant="18" id="7cn-Yt-IV6"/>
+                            <constraint firstItem="VNW-wm-Lbo" firstAttribute="leading" secondItem="rob-AJ-rXR" secondAttribute="leading" constant="15" id="Akd-rX-ccO"/>
                             <constraint firstItem="REr-lY-lZo" firstAttribute="leading" secondItem="rob-AJ-rXR" secondAttribute="leading" constant="15" id="JGG-km-RxU"/>
+                            <constraint firstAttribute="bottom" secondItem="VNW-wm-Lbo" secondAttribute="bottom" constant="6" id="ObK-Tb-gNC"/>
                             <constraint firstAttribute="trailing" secondItem="REr-lY-lZo" secondAttribute="trailing" constant="10" id="Qqa-vC-Cx0"/>
+                            <constraint firstItem="VNW-wm-Lbo" firstAttribute="top" secondItem="rob-AJ-rXR" secondAttribute="top" constant="33" id="TKa-oT-BY4"/>
+                            <constraint firstItem="REr-lY-lZo" firstAttribute="top" secondItem="rob-AJ-rXR" secondAttribute="top" constant="5" id="fYx-NS-ALm"/>
                         </constraints>
                         <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     </view>
