--- a/Minimal/Minimal/en.lproj/MainStoryboard.storyboard
+++ b/Minimal/Minimal/en.lproj/MainStoryboard.storyboard
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" variant="6xAndEarlier" propertyAccessControl="none" useAutolayout="YES" initialViewController="RlL-VG-lub">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" variant="6xAndEarlier" propertyAccessControl="none" useAutolayout="YES" initialViewController="RlL-VG-lub">
     <dependencies>
-        <deployment defaultVersion="1552" identifier="iOS"/>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <development version="4600" identifier="xcode"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
-        <!--View Controller - Simple-->
+        <!--View Controller - Minimal-->
         <scene sceneID="Tyh-jD-YlZ">
             <objects>
                 <tableViewController id="69H-mO-Zuk" customClass="MMViewController" sceneMemberID="viewController">
@@ -14,10 +14,20 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MMSignalCell" id="saP-dq-ru6">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Simple" id="rsV-1g-gem">
-                        <barButtonItem key="leftBarButtonItem" image="icn_actionbar_menu.png" id="wQB-jg-w0d"/>
-                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="dx4-eH-HtZ">
+                    <navigationItem key="navigationItem" title="Minimal" id="rsV-1g-gem">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="dx4-eH-HtZ">
                             <connections>
                                 <action selector="addButtonTouched:" destination="69H-mO-Zuk" id="gXc-yZ-cNP"/>
                             </connections>
@@ -32,8 +42,7 @@
         <scene sceneID="iSL-R1-FBX">
             <objects>
                 <navigationController definesPresentationContext="YES" id="RlL-VG-lub" sceneMemberID="viewController">
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" prompted="NO"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="iHJ-eS-Fry">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="iHJ-eS-Fry">
                         <rect key="frame" x="0.0" y="0.0" width="0.0" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -46,9 +55,6 @@
             <point key="canvasLocation" x="-768" y="118"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="icn_actionbar_menu.png" width="24" height="24"/>
-    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
