--- a/IRKit/IRKitResources/Base.lproj/IRMorsePlayerViewController.xib
+++ b/IRKit/IRKitResources/Base.lproj/IRMorsePlayerViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
@@ -9,6 +9,7 @@
             <connections>
                 <outlet property="animatingImageView" destination="Mrb-d4-gqn" id="xAD-NZ-jCi"/>
                 <outlet property="fullscreenBackgroundView" destination="wtz-dO-NuY" id="uHo-xk-Sfb"/>
+                <outlet property="morseNotWorkingButton" destination="3gG-sC-Fz9" id="Oxq-9G-TBa"/>
                 <outlet property="startButtonBox" destination="WD0-F1-zgM" id="jp8-mm-iAU"/>
                 <outlet property="view" destination="74" id="104"/>
                 <outlet property="volumeView" destination="k2I-eo-h4L" id="frS-rJ-z8O"/>
@@ -27,6 +28,22 @@
                         <constraint firstAttribute="height" constant="225" id="xtj-g1-Ntx"/>
                     </constraints>
                 </imageView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3gG-sC-Fz9">
+                    <rect key="frame" x="0.0" y="464" width="320" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="320" id="2dj-du-MgZ"/>
+                        <constraint firstAttribute="height" constant="30" id="ibF-Cw-Hi9"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
+                    <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="10" maxY="0.0"/>
+                    <state key="normal" title="Morse not working ?">
+                        <color key="titleColor" red="1" green="0.29803921570000003" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
+                    <connections>
+                        <action selector="morseNotWorkingButtonPressed:" destination="-1" eventType="touchUpInside" id="Pkc-3K-XIc"/>
+                    </connections>
+                </button>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Volume Up  " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="320" translatesAutoresizingMaskIntoConstraints="NO" id="laK-A4-rN4">
                     <rect key="frame" x="0.0" y="80" width="320" height="88"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -103,7 +120,9 @@
                 <constraint firstAttribute="bottom" secondItem="WD0-F1-zgM" secondAttribute="bottom" id="YCA-mx-5Hp"/>
                 <constraint firstAttribute="trailing" secondItem="wtz-dO-NuY" secondAttribute="trailing" id="ZYb-yY-IeA"/>
                 <constraint firstAttribute="bottom" secondItem="wtz-dO-NuY" secondAttribute="bottom" id="cyZ-If-43H"/>
+                <constraint firstAttribute="bottom" secondItem="3gG-sC-Fz9" secondAttribute="bottom" constant="74" id="diN-UA-K5M"/>
                 <constraint firstItem="wtz-dO-NuY" firstAttribute="top" secondItem="74" secondAttribute="top" id="wOI-H3-M2w"/>
+                <constraint firstAttribute="trailing" secondItem="3gG-sC-Fz9" secondAttribute="trailing" id="wV8-Cc-NeX"/>
                 <constraint firstItem="75I-xP-EJA" firstAttribute="top" secondItem="k2I-eo-h4L" secondAttribute="bottom" constant="-25" id="xKH-3s-IXD"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
