--- a/IRKit/IRKitResources/Base.lproj/IRNewSignalScene1ViewController.xib
+++ b/IRKit/IRKitResources/Base.lproj/IRNewSignalScene1ViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
@@ -57,7 +57,6 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="0.8980392157" green="0.8980392157" blue="0.8980392157" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="oCh-y0-pCo" firstAttribute="top" secondItem="RE2-dM-Lke" secondAttribute="bottom" constant="-13" id="30W-3N-3IB"/>
                 <constraint firstAttribute="centerX" secondItem="cI0-RD-WbM" secondAttribute="centerX" id="DPB-XJ-KbL"/>
